--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     "vite-plugin-pwa": "https://esm.sh/vite-plugin-pwa@^1.2.0",
     "@dnd-kit/core": "https://esm.sh/@dnd-kit/core@6.1.0",
     "@dnd-kit/sortable": "https://esm.sh/@dnd-kit/sortable@8.0.0",
-    "@dnd-kit/utilities": "https://esm.sh/@dnd-kit/utilities@3.2.2"
+    "@dnd-kit/utilities": "https://esm.sh/@dnd-kit/utilities@3.2.2",
+    "canvas-confetti": "https://esm.sh/canvas-confetti@1.9.2"
   }
 }
 </script>
